<?xml version="1.0"?>
<package format="2">
  <name>myrobot_junior</name>
  <version>0.0.0</version>
  <description>This package bundles together packages to run a simulated small scale myrobot robot</description>
  <maintainer email="isuru.madarasinghe@arimaclanka.com">isuru</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>

</package>
